alignment correction

--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -6,14 +6,14 @@
   }
   p {
     margin: 0;
+    font-size: 13px;
   }
 }
 
 .avg-rating{
-  margin: 20px 0 20px 25px;
+  margin: 20px 0 20px 0;
   display: flex;
   align-items: center;
-  font-size: 13px;
 }
 
 #avg-title {
@@ -27,7 +27,6 @@
 .star {
   padding-right: 15px;
 }
-
 
 .com-sub {
   display: flex;
@@ -52,7 +51,6 @@
   color: white;
 }
 
-
 .review-item {
   border-bottom: 1px solid #DDCEBB;
   margin-bottom: 0;
@@ -68,6 +66,7 @@
 .review-left {
   flex-basis:40%;
 }
+
 .review-right {
   flex:1;
 }
@@ -90,8 +89,3 @@
 .fa-check-circle {
   color: $green;
 }
-
-#content {
-  font-size: 13px;
-}
-
